header fixed, need tweak of spacing. Added some content, first section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ a {
   color: seashell;
 }
 
+
 /* header */
 header {
   display: flex;
@@ -32,8 +33,21 @@ nav span {
   padding: 20px;
 }
 
-
 .logo img {
   height: 50px;
   padding-left: 10px;
+}
+
+/* mission section */
+
+.mission {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 1200px;
+  height: 700px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
+}
+.mission span {
+  /* background-color: black; */
 }
